feat: added creation and initiation of channels
